--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "cloudinary": "^1.37.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
