--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
     "nodemon": "^2.0.22",
+    "socket.io": "^4.7.1",
     "ts-node-dev": "^2.0.0"
   }
 }
