--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
+    "node-otp-sender": "^1.0.3",
     "nodemon": "^2.0.22",
     "socket.io": "^4.7.1",
     "ts-node-dev": "^2.0.0"
